<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">



    <CheckBox
        android:id="@+id/cbQues1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/serotonin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline3"
        app:layout_constraintBottom_toTopOf="@id/cbQues2"
        android:layout_marginEnd="200dp"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="0dp"
        />

    <CheckBox
        android:id="@+id/cbQues2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/oxytocin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cbQues1"
        app:layout_constraintBottom_toTopOf="@id/cbQues3"
        android:layout_marginEnd="210dp"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="0dp"/>
    <CheckBox
        android:id="@+id/cbQues3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/endorphin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cbQues2"
        app:layout_constraintBottom_toTopOf="@id/cbQues4"
        android:layout_marginEnd="200dp"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="40dp"
        />

    <CheckBox
        android:id="@+id/cbQues4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dopamine"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/cbQues3"
        app:layout_constraintBottom_toTopOf="@id/guideline4"
        android:layout_marginEnd="204dp"
        android:layout_marginTop="55dp"
        android:layout_marginBottom="4dp"/>


    <TextView
        android:id="@+id/idQuestion2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="23dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/what_is_the_name_of_the_body_s_natural_painkiller_often_released_during_exercise_or_in_response_to_pain_or_stress"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/idBtnNext2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="70dp"
        android:layout_marginStart="170dp"

        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="201dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="582dp" />

</androidx.constraintlayout.widget.ConstraintLayout>



