<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">



    <CheckBox
        android:id="@+id/cbQ1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vitamin_b12"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline"
        app:layout_constraintBottom_toTopOf="@id/cbQ2"
        android:layout_marginEnd="200dp"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="0dp"
        />

    <CheckBox
        android:id="@+id/cbQ2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vitamin_a"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cbQ1"
        app:layout_constraintBottom_toTopOf="@id/cbQ3"
        android:layout_marginEnd="200dp"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="0dp"/>
    <CheckBox
        android:id="@+id/cbQ3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vitamin_c"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cbQ2"
        app:layout_constraintBottom_toTopOf="@id/cbQ4"
        android:layout_marginEnd="200dp"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="40dp"
        />

    <CheckBox
        android:id="@+id/cbQ4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vitamin_d"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/cbQ3"
        app:layout_constraintBottom_toTopOf="@id/guideline2"
        android:layout_marginEnd="200dp"
        android:layout_marginTop="55dp"
        android:layout_marginBottom="4dp"/>



    <TextView
        android:id="@+id/idQuestion1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/which_vitamin_is_known_as_the_quot_sunshine_vitamin_quot_because_our_skin_can_produce_it_when_exposed_to_sunlight"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="100dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="2dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:textSize="18sp"/>


    <Button
        android:id="@+id/idBtnNext1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="70dp"
        android:layout_marginStart="170dp"

         />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="201dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="582dp" />
</androidx.constraintlayout.widget.ConstraintLayout>