<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <CheckBox
        android:id="@+id/cbQuestion1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/the_spleen"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline9"
        app:layout_constraintBottom_toTopOf="@id/cbQuestion2"
        android:layout_marginEnd="200dp"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="0dp"
        />

    <CheckBox
        android:id="@+id/cbQuestion2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/the_appendix"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cbQuestion1"
        app:layout_constraintBottom_toTopOf="@id/cbQuestion3"
        android:layout_marginEnd="184dp"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="0dp"/>
    <CheckBox
        android:id="@+id/cbQuestion3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/the_tonsils"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cbQuestion2"
        app:layout_constraintBottom_toTopOf="@id/cbQuestion4"
        android:layout_marginEnd="200dp"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="40dp"
        />

    <CheckBox
        android:id="@+id/cbQuestion4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/the_thymus"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/cbQuestion3"
        app:layout_constraintBottom_toTopOf="@id/guideline10"
        android:layout_marginEnd="190dp"
        android:layout_marginTop="55dp"
        android:layout_marginBottom="4dp"/>


    <TextView
        android:id="@+id/idQuestion5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/what_is_the_name_of_the_human_body_s_largest_lymphatic_organ_which_plays_a_key_role_in_the_immune_system"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/idBtnNext5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="70dp"
        android:layout_marginStart="170dp"

        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="201dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="582dp" />


</androidx.constraintlayout.widget.ConstraintLayout>